[package]
name = "gladst"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["gladest-engine", "markdown-it-gladest/crates/markdown-it-gladest"]

[[bin]]
name = "gladst"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["cargo"] }
clap_derive = "4.5.32"
gladest-engine = { version = "0.1.0", path = "gladest-engine" }
glob = "0.3.2"
html-escape = "0.2.13"
indicatif = "0.17.11"
rayon = "1.10.0"
scraper = "0.23.1"
